platform/grafana/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - name: protected
      namespace: traefik
  hostnames:
    - grafana.kfirs.com
  rules:
    - backendRefs:
        - name: grafana
          port: 80
